Fix item carousel overflow

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -937,7 +937,7 @@ address {
 
 @media screen and (min-width: 800px) {
 	.item-carousel {
-		width: 50%;
+		width: 45%;
 	}
 
 	.item_details_wrapper {
@@ -945,8 +945,8 @@ address {
 
 		> section {
 			width: 50%;
-			margin-top: 2.5rem;
-			margin-left: 2.5rem;
+			margin-top: 3rem;
+			margin-left: 3rem;
 
 			h1 {
 				font-size: 2.5rem;
